Version 2.1.124
    Added Gold_Nugget to Mining's Bonus_Drops in config.yml (edit your config)
    Added Piglin to experience.yml combat XP tables with a value of 2.0 (edit your config)
    Added Hoglin to experience.yml combat XP tables with a value of 4.0 (edit your config)
    Added Zombified_Piglin & Zombie_Pigman to experience.yml combat XP tables with a value of 3.0

Version 2.1.123
    Added 'Nether_Gold_Ore' to Mining XP tables in experience.yml with a value of 1300
    Adept Salvage message will now show the correct minimum level
    'Weeping_Vines' renamed to 'Weeping_Vines_Plant' in experience.yml (no edits necessary)
    'Twisted_Vines_Plant' added to Herbalism XP tables in experience.yml with a value of 10
    Weeping_Vines_Plant and Twisted_Vines_Plant are now flagged as multi-block plants in Herbalism

Version 2.1.122
    Changed the xp values for Nether_Wart_Block and Warped_Wart_Block from 20 to 1 for Woodcutting
    Changed the xp values for Nether_Wart_Block and Warped_Wart_Block from 20 to 3 for Herbalism
    mcMMO now treats Nether_Wart_Block and Warped_Wart_Block as leaves
    Removed Crimson_Roots and Warped_Roots from Woodcutting XP tables in experience.yml
    Added Crimson_Roots and Warped_Roots to Herbalism XP tables in experience.yml with a value of 6 XP
    Fixed some start up bugs for salvage/repair

    You can either edit experience.yml yourself or delete it to regenerate a new one to get the new changes

Version 2.1.121
    Fixed a netherite related bug that prevented mcMMO from functioning correctly

Version 2.1.120
    Fixed a bug involving the new netherite equipment

Version 2.1.119
    1.16 Support
    Fixed another dupe bug
    Fixed a bug that can cause blast mining to give out more rewards than intended
    Blast Mining rewards are now randomized but still influenced by your blast mining rank
    mcMMO is now aware of turtle shell and treats it appropriately